--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.1",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -62,10 +64,12 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-table": "^8.21.2",
+    "@types/pg": "^8.16.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.4",
     "eslint": "8.48.0",
     "eslint-config-next": "^16.0.7",
     "input-otp": "^1.4.2",
@@ -77,7 +81,9 @@
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.4.1",
+    "pg": "^8.18.0",
     "postcss": "8.4.49",
+    "prisma": "^7.3.0",
     "react": "^19.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.0",
@@ -100,7 +106,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
-    "@types/node": "22.10.2",
+    "@types/node": "^25.2.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "@types/sort-by": "^1.2.3",
