--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     ]
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.12",
-    "@clerk/themes": "^2.2.26",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -65,6 +63,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-table": "^8.21.2",
     "@types/pg": "^8.16.0",
+    "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
